--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- :) 
+<!-- :)
     Christopher Vega Mendez
     10-05-2021
     Programacion
@@ -14,44 +14,47 @@
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/mainStyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 
-    <link rel = "icon" href = "favicon.ico" type = "image/x-icon"> 
+    <script src="scripts/responsiveNav.js"></script>
+
+    <link rel = "icon" href = "favicon.ico" type = "image/x-icon">
 
     <title>Totodile</title>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <a href="index.html" class="indexLink">
-                <h1>La wikidile <span>Tu sitio web sobre todo Totodile</span></h1>
+            <a href="index.html" class="h1">
+                <h1>La Wikidile</h1>
             </a>
-            <nav class="navPrincipal">
+            <nav class="topnav" id="myTopnav">
+                <a href="index.html" class="indexLink">
+                    Main Page
+                </a>
                 <a href="desc.html">Que es Totodile?</a>
                 <a href="media.html">Galeria</a>
                 <a href="merch.html">Mercancia</a>
-                <div class="dropmenu">
-                    <button class="dropBtn">Links Externos</button>
-                    <div class="dropmenu-content">
-                        <a target="_blank" href="https://25.pokemon.com/es-es/">Sitio Oficial</a>
-                        <a target="_blank" href="https://www.pokemon.com/el/pokedex/totodile">Pokedex Oficial</a>
-                    </div>
-                </div>
                 <a href="about.html">Contacto</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
             </nav>
         </header>
         <main><br><br>
             <section>
                 <h3>Holaaaa, bienvenido a la Wikidile! Tu sitio de informacion hacerca, sobre y para <br>🐊 Totodile, el mejor pokemon de todos, lo cual esta fuera de discusion 🐊 </h3> <br>
                 <p style="text-align: center;"><== Checa todos nuestros articulos ==></p><br><br>
-                <center>
+                <div class="asIndex">
                     <a href="desc.html" class="buyBtn">Que es un Totodile?</a>
                     <a href="merch.html" class="buyBtn">Mercancia del cocodrilo!</a>
                     <a href="media.html" class="buyBtn">Multimedia del cocodrilo!</a>
-                    <a href="about.html" class="buyBtn">Contactame!</a>
-                </center><br><br><br>
+                    <a href="about.html" class="buyBtn">Contactame!</a>                    
+                </div>
+                <div class="whiteSpace"></div>
             </section><br><br>
         </main>
     </div>
